# devenv_sandbox

./: .gitignore  README.md
cpp_cuda_env/: README.md  devenv.nix
cpp_cuda_env/cuda_playground/: CMakeLists.txt  main.cu
cpp_env/: .gitignore  README.md  devenv.nix
cpp_env/cmake_playground/: CMakeLists.txt  README.md  main.cpp
cpp_env/cmake_playground/cmake/: create_version.cmake  named_args.cmake  parent_scope.cmake
cpp_env/cmake_playground/include/: Version.h.in
cpp_env/eigen_playground/: CMakeLists.txt  README.md
cpp_env/eigen_playground/apps/: CMakeLists.txt  main.cpp
cpp_env/eigen_playground/include/some_lib/: some_lib.h
cpp_env/eigen_playground/include/util/: utility.h
cpp_env/eigen_playground/tests/: test_utility.cpp
cpp_env/eigen_playground/util/: CMakeLists.txt
cpp_env/proj_template/: CMakeLists.txt
cpp_env/proj_template/apps/: CMakeLists.txt  main.cpp
cpp_env/proj_template/some_lib/: CMakeLists.txt  some_lib.cpp
cpp_env/proj_template/tests/: CMakeLists.txt
cpp_env/proj_template/util/: utility.cpp
cpp_mpi_env/: README.md  devenv.nix
cpp_mpi_env/mpi_playground/: CMakeLists.txt  main.cpp
data_science_env/: README.md  devenv.nix  requirements.txt
lightgbm_env/: .gitignore  .gitmodules  README.md  devenv.nix
ml_python_env/: README.md  devenv.nix  requirements.txt
polars_env/: .gitignore  README.md
python_env/: .gitignore  2.gradient_based_one_side_sampling.ipynb  3.greedy_bundling.ipynb  README.md  devenv.yaml  polars_playground.ipynb  requirements.txt  stat_quest_follow_through.ipynb  sympy_math_playground.ipynb
python_env/lightgbm/: 1.histogram_based.ipynb  4.merge_exclusive_features.ipynb  5.efb_one_shot_comparison.ipynb  6.example_of_xgboost_vs_lightgbm.ipynb
rust_env/: README.md  devenv.nix
rust_env/01.hello_world/: README.md
rust_env/03.common_programming_concepts/src/: main.rs
rust_env/09.error_handling/: hello.txt
rust_env/1.hello_world/: Cargo.toml
rust_env/10.generic_types/src/: main.rs
rust_env/9.error_handling/src/: main.rs
